--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,9 @@ ENV=development
 LOG_LEVEL=debug
 
 # Database Configuration
+# Use DB_PORT=5433 when Postgres runs via Docker (host port mapping in docker-compose)
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5433
 DB_NAME=hamsaya
 DB_USER=postgres
 DB_PASSWORD=postgres
