--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,9 @@ STORAGE_SECRET_KEY=minioadmin
 STORAGE_BUCKET_NAME=hamsaya-uploads
 STORAGE_USE_SSL=false
 STORAGE_REGION=us-east-1
+# URL returned to clients for uploaded files. Use localhost only for same-machine testing.
+# When the app (e.g. Flutter) runs on a device, set this to a URL the device can reach, e.g.:
+# CDN_URL=http://YOUR_MACHINE_IP:9000
 CDN_URL=http://localhost:9000
 
 # Firebase Configuration (for push notifications)
